--- a/Assignmentq,2.html
+++ b/Assignmentq,2.html
@@ -5,7 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second</title>
-    <script src="script.js".js"></script>
+    <script>
+    var x = "global value"
+console.log("x value outside function : "+x)
+
+function a(){
+    var x="local value"
+    console.log("x value in function a after changing : "+x)
+    b()
+}
+
+function b(){
+    console.log("x value in function b without changing : "+x)
+}
+
+a()
+    </script>
 </head>
 <body>
     <h1>Scope of variables</h1>
